fix for mobile, font-sizes and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -332,7 +332,7 @@ img.hover-zoom:hover {
 
   p {
     font-weight: 400;
-    font-size: 16px;
+    /*font-size: 16px;*/
   }
 
   .hero-container, .intro-text {
