--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -44,6 +44,6 @@ h4 {
 @media screen and (max-width: 414px) {
   .footer-container {
     justify-content: center;
-    font-size: 18px;
+    font-size: 20px;
   }
 }
