--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   background: #fff !important;
   height: 3.2em;
   display: flex;
-  font-size: 1.2rem;
+  /*font-size: 1.2rem;*/
   position: sticky;
   top: 0;
   z-index: 999;
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1500px;
+  /*max-width: 1500px;*/
   padding: 5px 0;
 }
 
@@ -33,7 +33,7 @@
   text-align: center;
   width: 66vw; /*50vw, 60vw*/
   justify-content: right;
-  margin-right: 2rem;
+  /*margin-right: 2rem;*/
 }
 
 .nav-item {
@@ -158,7 +158,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 35%);
+    transform: translate(-100%, 20%);
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -173,7 +173,7 @@
     text-align: center;
     margin: 2rem auto;
     border-radius: 4px;
-    width: 80%;
+    /*width: 80%;*/
     text-decoration: none;
     font-size: 1.5rem;
     background-color: transparent;
@@ -203,9 +203,10 @@
 
 @media screen and (max-width: 414px) {
   .title-name {
-    width: 300px;
+    /*width: 300px;*/
+    /*width: auto; */
     font-size: 18px;
-    line-height: 1.2;
+    /*line-height: 1.2;*/
   }
   .navbar {
     width: 100% !important;
@@ -215,6 +216,10 @@
   .navbar-logo {
     margin-top: -0.9em !important;
   }
+
+  .menu-icon {
+    transform: translate(-100%, 70%)
+  }
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 3) {
@@ -222,6 +227,7 @@
     /*width: 422px;*/
     width: 100% !important;
     padding: 0 5px;
+    height: auto;
   }
 }
 
